[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/game/ui/cards/hero_card.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.12, 0.1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.4, 0.3, 0.2, 1)
corner_radius_all = 4
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="HeroCard" type="Control"]
custom_minimum_size = Vector2(300, 420)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 420.0
script = ExtResource("1_card")

[node name="CardFrame" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="CardFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Header" type="ColorRect" parent="CardFrame/VBox"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
color = Color(0, 0, 0, 0.3)

[node name="Name" type="Label" parent="CardFrame/VBox/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "NAME"
vertical_alignment = 1

[node name="ArtFrame" type="Panel" parent="CardFrame/VBox"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="Art" type="TextureRect" parent="CardFrame/VBox/ArtFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="SubHeader" type="HBoxContainer" parent="CardFrame/VBox"]
layout_mode = 2

[node name="Class" type="Label" parent="CardFrame/VBox/SubHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "[CLASS]"

[node name="Level" type="Label" parent="CardFrame/VBox/SubHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Lv. 1"
horizontal_alignment = 2

[node name="Description" type="Panel" parent="CardFrame/VBox"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 0.2)

[node name="Text" type="RichTextLabel" parent="CardFrame/VBox/Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
text = "Character description goes here..."

[node name="Stats" type="HBoxContainer" parent="CardFrame/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HP" type="HBoxContainer" parent="CardFrame/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="CardFrame/VBox/Stats/HP"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "HP:"

[node name="Value" type="Label" parent="CardFrame/VBox/Stats/HP"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100"

[node name="ATK" type="HBoxContainer" parent="CardFrame/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="CardFrame/VBox/Stats/ATK"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ATK:"

[node name="Value" type="Label" parent="CardFrame/VBox/Stats/ATK"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "10"

[node name="DEF" type="HBoxContainer" parent="CardFrame/VBox/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="CardFrame/VBox/Stats/DEF"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "DEF:"

[node name="Value" type="Label" parent="CardFrame/VBox/Stats/DEF"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "5"
